feat(more blocks): add compressed stone and prepare for official 1.0 release

--- a/src/main/resources/assets/pannotiasparcels/lang/en_us.json
+++ b/src/main/resources/assets/pannotiasparcels/lang/en_us.json
@@ -6,6 +6,10 @@
   "block.pannotiasparcels.compressed_cobblestone_2x": "Compressed Cobblestone (2x)",
   "block.pannotiasparcels.compressed_cobblestone_3x": "Compressed Cobblestone (3x)",
   "block.pannotiasparcels.compressed_cobblestone_4x": "Compressed Cobblestone (4x)",
+  "block.pannotiasparcels.compressed_stone_1x": "Compressed Stone (1x)",
+  "block.pannotiasparcels.compressed_stone_2x": "Compressed Stone (2x)",
+  "block.pannotiasparcels.compressed_stone_3x": "Compressed Stone (3x)",
+  "block.pannotiasparcels.compressed_stone_4x": "Compressed Stone (4x)",
   "block.pannotiasparcels.compressed_dirt_1x": "Compressed Dirt (1x)",
   "block.pannotiasparcels.compressed_dirt_2x": "Compressed Dirt (2x)",
   "block.pannotiasparcels.compressed_dirt_3x": "Compressed Dirt (3x)",
